<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_route">

    <fragment
            android:id="@+id/navigation_route"
            android:name="com.osees.musterman.ui.route.RouteFragment"
            android:label="@string/title_route"
            tools:layout="@layout/fragment_route"/>

    <fragment
            android:id="@+id/navigation_results"
            android:name="com.osees.musterman.ui.results.ResultsFragment"
            android:label="@string/title_results"
            tools:layout="@layout/fragment_results"/>

    <fragment
            android:id="@+id/navigation_statistics"
            android:name="com.osees.musterman.ui.statistics.StatisticsFragment"
            android:label="@string/title_statistics"
            tools:layout="@layout/fragment_statistics"/>
</navigation>