<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="bottom"
        android:orientation="vertical">

    <TextView
            android:id="@+id/consumption_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/route_text_viw_edit"/>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/consumption_linear_sum"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/consumption_text_view_sum"
                android:text="@string/consumption_text_view_sum"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_weight="2"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:gravity="center"
                android:textSize="16sp"
                android:id="@+id/consumption_text_input_sum"
                android:layout_weight="1.5"
                android:selectAllOnFocus="true"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/consumption_linear_cause"
            tools:ignore="MissingConstraints"
            android:gravity="center">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/consumption_text_view_cause"
                android:text="@string/consumption_text_view_cause"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="16sp" android:layout_weight="2"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/consumption_button_cause"
                tools:ignore="SpeakableTextPresentCheck"
                android:textSize="14sp"
                android:layout_weight="1.5"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/consumption_linear_checks"
            tools:ignore="MissingConstraints"
            android:gravity="center">

        <CheckBox
                android:text="@string/consumption_check_box_profit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/consumption_check_box_profit"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

        <CheckBox
                android:text="@string/consumption_check_box_loss"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/consumption_check_box_loss"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="center"/>

    </LinearLayout>


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/consumption_button_handle"
            android:text="@string/consumption_button_handle"
            tools:ignore="SpeakableTextPresentCheck"/>

</LinearLayout>